enable time slider

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<script src='data/data.js'></script>
 		<script src='data/means.js'></script>
 		<script src='js/mapmaker.js'></script>
-		<script src='js/addprecip.js'></script>
+		<script src='js/precipdata.js'></script>
+		<script src='js/timecontrols.js'></script>
 		<script src='js/chart.js'></script>
 	</head>
 	<body>
@@ -30,9 +31,9 @@
 				<button id='portland'>Portland</button>
 			</div>
 			<br>
-			<div id='time'></div>
+			<div id='timedisplay'></div>
 			<br>
-			<input id='slider' class='slider' type='range' min='1' max='29' value='1'>
+			<input id='slider' class='slider' type='range' min='0' max='28' value='0'>
 			<br>
 			<div id='linechart'>
 				<canvas id='canvas'></canvas>
