--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'>
 		<link rel='icon' href='img/spire_symb_red.png'>
 		<link rel='stylesheet' type='text/css' href='css/main.css'>
+		<link rel='stylesheet' type='text/css' href='css/time.css'>
 		<link rel='stylesheet' type='text/css' href='lib/mapbox-gl-v1.5.0.css'>
 		<script src='lib/mapbox-gl-v1.5.0.js'></script>
 		<script src='lib/Chart-2.8.0.min.js'></script>
@@ -31,7 +32,10 @@
 				<button id='portland'>Portland</button>
 			</div>
 			<br>
-			<div id='timedisplay'></div>
+			<div id='time'>
+				<div id='playpause' class='pause'></div>
+				<div id='timedisplay'></div>
+			</div>
 			<br>
 			<input id='slider' class='slider' type='range' min='0' max='28' value='0'>
 			<br>
