--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<br>
 			<div id='time'>
-				<div id='playpause' class='pause'></div>
+				<div id='playpause' class='play'></div>
 				<div id='timedisplay'></div>
 			</div>
 			<br>
